--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
     "compressorjs": "^1.2.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.16.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-themes": "latest",
+    "next-themes": "^0.4.6",
     "react": "^19",
     "react-datepicker": "^8.3.0",
     "react-day-picker": "8.10.1",
